Update openapi yaml
